# meoShortURL

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package.json  test_env.ts  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
client/: index.html  package.json
client/src/pages/: Dashboard.tsx
public/: robots.txt
rust-backend/: Cargo.toml
rust-backend/src/: db.rs  main.rs  models.rs  session.rs
rust-backend/src/handlers/: admin.rs  auth.rs  mod.rs  redirect.rs  shorten.rs
src/: App.tsx  dashboard.html  index.css  index.html  index.ts
src/pages/: Dashboard.tsx  Home.tsx
